--- a/kwitter_page.html
+++ b/kwitter_page.html
@@ -19,7 +19,7 @@
 
 <div class="container">
 	<button id="logout" onclick="logout();" class="glyphicon glyphicon-log-out btn btn-danger">Logout</button>
-	<button id="bACK" onclick="back();" class="btn btn-primary">Logout</button>
+	<button id="bACK" onclick="back();" class="btn btn-primary">Back</button>
 	<center>
 		<h1 class="header">	
 			Instincts
